@@ -23,7 +23,14 @@
 #ifndef _ZEBRA_NETWORK_H
 #define _ZEBRA_NETWORK_H
 
+/* Both readn and writen are deprecated and will be removed.  They are not
+   suitable for use with non-blocking file descriptors.
+ */
 int readn (int, u_char *, int);
 int writen (int, const u_char *, int);
+
+/* Set the file descriptor to use non-blocking I/O.  Returns 0 for success,
+   -1 on error. */
+extern int set_nonblocking(int fd);
 
 #endif /* _ZEBRA_NETWORK_H */
